# python-project-template

./: README.md  cookiecutter.json
{{ cookiecutter.__project_slug }}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
{{ cookiecutter.__project_slug }}/scripts/: format.sh  lint.sh  static.sh  test.sh
{{ cookiecutter.__project_slug }}/tests/: test_hello.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__package_name }}/: __init__.py  hello.py
